native/include/mosaic.h

typedef enum mosaic_status {
    MOSAIC_OK = 0,
    MOSAIC_ERROR_INVALID_ARGUMENT = 1,
    MOSAIC_ERROR_IO = 2,
    MOSAIC_ERROR_INVALID_PACK = 3,
    MOSAIC_ERROR_OUT_OF_MEMORY = 4,
    MOSAIC_ERROR_OVERFLOW = 5,
    MOSAIC_ERROR_UNKNOWN_TOKEN_ID = 6,
    MOSAIC_ERROR_INTERNAL = 7,
    MOSAIC_ERROR_CONFLICT = 8,
    MOSAIC_ERROR_RESOURCE_LIMIT = 9,
    MOSAIC_ERROR_UNSUPPORTED = 10,
    MOSAIC_ERROR_NOT_FOUND = 11,
    MOSAIC_ERROR_INTEGRITY = 12,
    MOSAIC_ERROR_STATE = 13,
    MOSAIC_ERROR_UNTRUSTED = 14,
    MOSAIC_ERROR_REVOKED = 15
} mosaic_status;
typedef struct mosaic_model mosaic_model;
typedef struct mosaic_unicode mosaic_unicode;
typedef struct mosaic_tokenizer mosaic_tokenizer;
typedef struct mosaic_stream mosaic_stream;
typedef struct mosaic_document mosaic_document;
typedef struct mosaic_token {
    uint32_t id;
    uint64_t start;
    uint64_t length;
    int32_t cost;
} mosaic_token;
typedef struct mosaic_range {
    uint64_t start;
    uint64_t length;
} mosaic_range;
/* Returned buffers are owned by Mosaic and released with mosaic_free(). */
MOSAIC_API void mosaic_free(void *pointer);
MOSAIC_API const char *mosaic_version_string(void);
/* Canonical tokenization-semantics version. This changes only when identical packs/input may
 * have different canonical interpretation under the runtime. It is intentionally independent
 * from the release and C ABI versions. */
MOSAIC_API uint32_t mosaic_tokenizer_semantics_version(void);
MOSAIC_API const char *mosaic_status_string(mosaic_status status);
MOSAIC_API mosaic_status mosaic_tokenizer_load_files(const char *model_path, const char *unicode_path,
                                          mosaic_tokenizer **out_tokenizer);
MOSAIC_API void mosaic_tokenizer_free(mosaic_tokenizer *tokenizer);
MOSAIC_API mosaic_status mosaic_tokenizer_fingerprint(const mosaic_tokenizer *tokenizer, uint8_t out_sha256[32]);
MOSAIC_API mosaic_status mosaic_tokenizer_encode(const mosaic_tokenizer *tokenizer, const uint8_t *input, size_t input_len,
                                      uint32_t **out_ids, size_t *out_count);
MOSAIC_API mosaic_status mosaic_tokenizer_decode(const mosaic_tokenizer *tokenizer, const uint32_t *ids, size_t count,
                                      uint8_t **out_bytes, size_t *out_len);
MOSAIC_API mosaic_status mosaic_tokenizer_grapheme_ranges(const mosaic_tokenizer *tokenizer,
                                               const uint8_t *input, size_t input_len,
                                               mosaic_range **out_ranges, size_t *out_count);
/* Pack bytes are copied; caller may release its input immediately. */
MOSAIC_API mosaic_status mosaic_model_load_memory(const uint8_t *pack, size_t pack_len, mosaic_model **out_model);
MOSAIC_API mosaic_status mosaic_model_load_file(const char *path, mosaic_model **out_model);
MOSAIC_API void mosaic_model_free(mosaic_model *model);
/* Exact arbitrary-byte tokenization. */
MOSAIC_API mosaic_status mosaic_encode(const mosaic_model *model, const uint8_t *input, size_t input_len,
                            uint32_t **out_ids, size_t *out_count);
MOSAIC_API mosaic_status mosaic_encode_tokens(const mosaic_model *model, const uint8_t *input, size_t input_len,
                                   mosaic_token **out_tokens, size_t *out_count);
MOSAIC_API mosaic_status mosaic_decode(const mosaic_model *model, const uint32_t *ids, size_t count,
                            uint8_t **out_bytes, size_t *out_len);
/* Streaming v0.1 is semantically exact and buffers until EOF. The stream owns
 * an internal copy of the model, so the source model may be released after creation. */
MOSAIC_API mosaic_status mosaic_stream_create(const mosaic_model *model, mosaic_stream **out_stream);
MOSAIC_API mosaic_status mosaic_stream_push(mosaic_stream *stream, const uint8_t *bytes, size_t len);
MOSAIC_API mosaic_status mosaic_stream_finish(mosaic_stream *stream, uint32_t **out_ids, size_t *out_count);
MOSAIC_API mosaic_status mosaic_stream_reset(mosaic_stream *stream);
MOSAIC_API void mosaic_stream_free(mosaic_stream *stream);
/* Editable-document v0.1 preserves exact semantics and currently retokenizes the
 * complete document after edits. Future incremental engines must be equivalent. */
MOSAIC_API mosaic_status mosaic_document_create(const mosaic_model *model, const uint8_t *input, size_t input_len,
                                     mosaic_document **out_document);
MOSAIC_API mosaic_status mosaic_document_apply_edit(mosaic_document *document, uint64_t start, uint64_t delete_len,
                                         const uint8_t *replacement, size_t replacement_len);
MOSAIC_API mosaic_status mosaic_document_encode(const mosaic_document *document, uint32_t **out_ids, size_t *out_count);
MOSAIC_API mosaic_status mosaic_document_copy_bytes(const mosaic_document *document, uint8_t **out_bytes, size_t *out_len);
MOSAIC_API void mosaic_document_free(mosaic_document *document);
MOSAIC_API mosaic_status mosaic_unicode_load_file(const char *path, mosaic_unicode **out_unicode);
MOSAIC_API void mosaic_unicode_free(mosaic_unicode *unicode_data);
/* Invalid UTF-8 bytes are returned as one-byte opaque grapheme ranges. */
MOSAIC_API mosaic_status mosaic_grapheme_ranges(const mosaic_unicode *unicode_data,
                                     const uint8_t *input, size_t input_len,
                                     mosaic_range **out_ranges, size_t *out_count);